--- a/Pagina-principal/index.html
+++ b/Pagina-principal/index.html
@@ -16,8 +16,9 @@
 
   <main>
     <h1>Principais noticias</h1>
+    <img src="imagens/iphone 15.jpg" alt="iphone 15">
     <article>
-    <h2>Appel lança novo iphone 15! Veja os detalhes</h2>
+    <h2>Appel lança novo iphone 15! confira</h2>
     </article>
   </main>
   
