--- a/Pagina-android/como-surgiu-o-android.html
+++ b/Pagina-android/como-surgiu-o-android.html
@@ -18,8 +18,7 @@
   <nav>
     <a href="#">home</a>
     <a href="#">noticicas</a>
-    <a href="#">curiosidades</a>
-    <a href="#">fale conosco</a>
+    <a href="#">contato</a>
   </nav>
   <main>
     <article>
