linkagem entre paginas

--- a/Pagina-android/como-surgiu-o-android.html
+++ b/Pagina-android/como-surgiu-o-android.html
@@ -16,7 +16,7 @@
       em um unico lugar</p>
   </header>
   <nav>
-    <a href="../Pagina-principal/index.html">home</a>
+    <a href="/Pagina-principal/index.html">home</a>
     <a href="#">noticicas</a>
     <a href="#">contato</a>
   </nav>
