mudanças no site

--- a/Pagina-android/como-surgiu-o-android.html
+++ b/Pagina-android/como-surgiu-o-android.html
@@ -17,7 +17,7 @@
   </header>
   <nav>
     <a href="/Pagina-principal/index.html">home</a>
-    <a href="#">noticicas</a>
+    <a href="/Pagina-noticias/noticias.html">noticicas</a>
     <a href="#">contato</a>
   </nav>
   <main>
