--- a/Pagina-principal/index.html
+++ b/Pagina-principal/index.html
@@ -14,12 +14,16 @@
       em um unico lugar</p>
   </header>
 
+  <nav>
+    <a href="/Pagina-principal/index.html">home</a>
+    <a href="/Pagina-noticias/noticias.html">noticicas</a>
+    <a href="#">contato</a>
+  </nav>
+
   <main>
-    <h1>Principais noticias</h1>
-    <img src="imagens/iphone 15.jpg" alt="iphone 15">
-    <article>
-    <h2>Appel lança novo iphone 15! confira</h2>
-    </article>
+    <h1>ola mundo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id velit et maiores mollitia. Quibusdam neque cumque doloremque corporis saepe, ducimus, nam adipisci voluptatum minus sint temporibus eum consequuntur magnam accusantium?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt temporibus cupiditate nisi quia, inventore distinctio omnis deleniti esse, fuga at in, tempora aut sunt! Accusantium consequatur dicta doloribus enim aliquid Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ratione vel commodi consequatur necessitatibus quam, porro veniam sint. Temporibus, sit! Nesciunt maiores vero provident aut alias voluptatum earum atque veritatis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque illo numquam eveniet eos. Eligendi quos sit cum repellendus et, vero sint porro magnam ab quisquam necessitatibus laborum. Vel, porro. Architecto!
+    </p>
   </main>
   
   <footer>
