--- a/Pagina-principal/index.html
+++ b/Pagina-principal/index.html
@@ -21,9 +21,11 @@
   </nav>
 
   <main>
-    <h1>ola mundo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id velit et maiores mollitia. Quibusdam neque cumque doloremque corporis saepe, ducimus, nam adipisci voluptatum minus sint temporibus eum consequuntur magnam accusantium?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt temporibus cupiditate nisi quia, inventore distinctio omnis deleniti esse, fuga at in, tempora aut sunt! Accusantium consequatur dicta doloribus enim aliquid Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ratione vel commodi consequatur necessitatibus quam, porro veniam sint. Temporibus, sit! Nesciunt maiores vero provident aut alias voluptatum earum atque veritatis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque illo numquam eveniet eos. Eligendi quos sit cum repellendus et, vero sint porro magnam ab quisquam necessitatibus laborum. Vel, porro. Architecto!
+    <h1>Quem sou eu?</h1>
+    <p>Meu nome é Pedro Henrique, tenho 14 anos e sou estudante de progamação, começei estudando Python depois fui pra Javascript, agora estou estudando HTML5 e CSS3 no curso do curso em video do professor Gustavo Guanabara, pretendo ser progamador front-end e começar um estagio quando completar 16 anos, também pretendo trabalhar em grandes empresas como microsoft, google etc...
+    
     </p>
+    <h2>Meus projetos</h2>
   </main>
   
   <footer>
